加载页动画效果

--- a/js/pages/checkin/goBooking.html
+++ b/js/pages/checkin/goBooking.html
@@ -19,7 +19,7 @@
 }
 </style>
 <div ms-controller="goBooking" class="bs-bg-white back" ms-css-background-image="url({{goBooking}})">
-    <div class="btn bs-text-yellow bs-text-18" ms-click="goBook">
+    <div class="btn bs-text-yellow bs-text-18" ms-on-tap="goBook">
         前去预定
     </div>
 </div>
